[package]
name = "terrain_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = [ "dynamic_linking", "file_watcher" ] }
bevy_rapier3d = { version = "0.25.0", features = [ "simd-stable", "debug-render-3d" ] }
bevy_atmosphere = "0.9.0"
bevy_procedural_grass = "0.2.0"
bevy_dolly = "0.0.3"
bevy_flycam = "0.13.0"
bevy_egui = "0.26.0"
bevy-inspector-egui = "0.23.4"
egui_dock = "0.11.4"
egui-gizmo = "0.16.2"
noise = { version = "0.9.0", features = ["images"] }
rand = "0.8.5"
futures-lite = "2.3.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
